; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_si.c_dce6_dram_bandwidth_for_display.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_si.c_dce6_dram_bandwidth_for_display.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dce6_wm_params = type { i32, i32 }
%struct.TYPE_7__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dce6_wm_params*)* @dce6_dram_bandwidth_for_display to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dce6_dram_bandwidth_for_display(%struct.dce6_wm_params* %0) #0 {
  %2 = alloca %struct.dce6_wm_params*, align 8
  %3 = alloca %struct.TYPE_7__, align 8
  %4 = alloca %struct.TYPE_7__, align 8
  %5 = alloca %struct.TYPE_7__, align 8
  %6 = alloca %struct.TYPE_7__, align 8
  %7 = alloca %struct.TYPE_7__, align 8
  store %struct.dce6_wm_params* %0, %struct.dce6_wm_params** %2, align 8
  %8 = call i8* @dfixed_const(i32 1000)
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  store i8* %8, i8** %9, align 8
  %10 = load %struct.dce6_wm_params*, %struct.dce6_wm_params** %2, align 8
  %11 = getelementptr inbounds %struct.dce6_wm_params, %struct.dce6_wm_params* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i8* @dfixed_const(i32 %12)
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  store i8* %13, i8** %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  %19 = call i8* @dfixed_div(i8* %16, i8* %18)
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  store i8* %19, i8** %20, align 8
  %21 = load %struct.dce6_wm_params*, %struct.dce6_wm_params** %2, align 8
  %22 = getelementptr inbounds %struct.dce6_wm_params, %struct.dce6_wm_params* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = mul nsw i32 %23, 4
  %25 = call i8* @dfixed_const(i32 %24)
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  store i8* %25, i8** %26, align 8
  %27 = call i8* @dfixed_const(i32 10)
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  store i8* %27, i8** %28, align 8
  %29 = call i8* @dfixed_const(i32 3)
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 0
  store i8* %29, i8** %30, align 8
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 0
  %32 = load i8*, i8** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %34 = load i8*, i8** %33, align 8
  %35 = call i8* @dfixed_div(i8* %32, i8* %34)
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 0
  store i8* %35, i8** %36, align 8
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %38 = load i8*, i8** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %40 = load i8*, i8** %39, align 8
  %41 = call i8* @dfixed_mul(i8* %38, i8* %40)
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  store i8* %41, i8** %42, align 8
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %44 = load i8*, i8** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 0
  %46 = load i8*, i8** %45, align 8
  %47 = call i8* @dfixed_mul(i8* %44, i8* %46)
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  store i8* %47, i8** %48, align 8
  %49 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %50 = load i8*, i8** %49, align 8
  %51 = call i32 @dfixed_trunc(i8* %50)
  ret i32 %51
}

declare dso_local i8* @dfixed_const(i32) #1

declare dso_local i8* @dfixed_div(i8*, i8*) #1

declare dso_local i8* @dfixed_mul(i8*, i8*) #1

declare dso_local i32 @dfixed_trunc(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
